# conflict-arbiter

./: CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README.zh.md  pyproject.toml
config/: agent.yaml  arbitration_rules.yaml
docs/: ARCHITECTURE.md
scripts/: __init__.py  arbitrate.py
src/: __init__.py  adapter.py  api_clients.py  arbiter.py
tests/: __init__.py  test_api_clients.py  test_core.py  test_smoke.py
